--- a/task6/front-end/package.json
+++ b/task6/front-end/package.json
@@ -2,13 +2,17 @@
   "name": "task6",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "ejs": "^3.1.6",
+    "express-session": "^1.17.2",
+    "mongoose": "^6.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
