--- a/task6/front-end/package.json
+++ b/task6/front-end/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "latest",
     "ejs": "^3.1.6",
     "express-session": "^1.17.2",
     "mongoose": "^6.0.11",
