--- a/task6/front-end/package.json
+++ b/task6/front-end/package.json
@@ -6,7 +6,8 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "antd": "latest",
+    "antd": "^4.16.13",
+    "axios": "^0.24.0",
     "ejs": "^3.1.6",
     "express-session": "^1.17.2",
     "mongoose": "^6.0.11",
@@ -16,7 +17,6 @@
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "react-scripts start"
