--- a/task6/front-end/package.json
+++ b/task6/front-end/package.json
@@ -8,14 +8,10 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.16.13",
     "axios": "^0.24.0",
-    "ejs": "^3.1.6",
-    "express-session": "^1.17.2",
-    "mongoose": "^6.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
